[package]
name = "karaconv"
version = "0.1.0"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

[dependencies]
chrono = "0.4.0"
failure = "0.1.1"
failure_derive = "0.1.1"
itertools = "0.7.7"
regex = "0.2.9"
result = "1.0.0"
serde = { version = "1.0.30", features = ["derive"] }
serde_json = { version = "1.0.11", features = ["preserve_order"] }
serde-xml-rs = "0.2.1"
structopt = "0.2.5"

[dev-dependencies]
tempdir = "0.3.6"

